headlines adpter finished

--- a/app/src/main/res/layout/news_card_view.xml
+++ b/app/src/main/res/layout/news_card_view.xml
@@ -18,7 +18,7 @@
         android:paddingRight="15dp">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/newsThumpNailCardView"
+            android:id="@+id/HeadLineThumbNailCardView"
             android:layout_width="80dp"
             android:layout_height="80dp"
             app:cardCornerRadius="30dp"
@@ -27,17 +27,17 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/newsThumpNail"
+                android:id="@+id/HeadLineThumbNail"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-                tools:src="@drawable/newsthumpnail" />
+                tools:src="@drawable/newsthumbnail" />
 
         </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@+id/newsHeadLine"
+            android:id="@+id/HeadLineTitle"
             android:layout_width="235dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -46,18 +46,18 @@
             android:text="Unemployment rate reaches 2-year high of 6.9% in October, shows CMIE date; key things to know"
             android:textSize="14dp"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/newsThumpNailCardView"
-            app:layout_constraintTop_toTopOf="@id/newsThumpNailCardView" />
+            app:layout_constraintStart_toEndOf="@+id/HeadLineThumbNailCardView"
+            app:layout_constraintTop_toTopOf="@id/HeadLineThumbNailCardView" />
 
         <TextView
-            android:id="@+id/newsSource"
+            android:id="@+id/HeadLineSource"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:textColor="@color/newsSourceText"
             android:text="edition.cnn.com • 1h"
-            app:layout_constraintBottom_toBottomOf="@id/newsThumpNailCardView"
-            app:layout_constraintStart_toEndOf="@id/newsThumpNailCardView" />
+            app:layout_constraintBottom_toBottomOf="@id/HeadLineThumbNailCardView"
+            app:layout_constraintStart_toEndOf="@id/HeadLineThumbNailCardView" />
 
         <ImageView
             android:id="@+id/popUpMenue"
@@ -65,7 +65,7 @@
             android:layout_height="20dp"
             android:src="@drawable/popup_menu"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/newsHeadLine" />
+            app:layout_constraintTop_toTopOf="@id/HeadLineTitle" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
